--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -63,6 +63,10 @@ parameters:
     description: Mapping of service_name -> network name. Typically set
                  via parameter_defaults in the resource registry.
     type: json
+  TimeZone:
+    default: 'UTC'
+    description: The timezone to be set on Ceph nodes.
+    type: string
   Hostname:
     type: string
     default: '' # Defaults to Heat created hostname
@@ -206,6 +210,7 @@ resources:
                 swift_mount_check: {get_input: swift_mount_check }
                 tripleo::ringbuilder::min_part_hours: { get_input: swift_min_part_hours }
                 ntp::servers: {get_input: ntp_servers}
+                timezone::timezone: {get_input: timezone}
                 # NOTE(dprince): build_ring support is currently not wired in.
                 # See: https://review.openstack.org/#/c/109225/
                 tripleo::ringbuilder::build_ring: True
@@ -231,6 +236,7 @@ resources:
         swift_part_power: {get_param: PartPower}
         swift_replicas: { get_param: Replicas}
         ntp_servers: {get_param: NtpServer}
+        timezone: {get_param: TimeZone}
         enable_package_install: {get_param: EnablePackageInstall}
         enable_package_upgrade: {get_attr: [UpdateDeployment, update_managed_packages]}
         swift_management_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, SwiftMgmtNetwork]}]}
