Add TimeZone parameter for all node types
Adds a TimeZone parameter for node types and the top level
stack. Defaults to UTC.

Change-Id: I98123d894ce429c34744233fe3e631cbdd7c12b5
Depends-On: Icf7c681f359e3e48b653ea4648db6a73b532d45e

--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -99,6 +99,10 @@ parameters:
     description: Mapping of service endpoint -> protocol. Typically set
                  via parameter_defaults in the resource registry.
     type: json
+  TimeZone:
+    default: 'UTC'
+    description: The timezone to be set on Cinder nodes.
+    type: string
   GlanceApiVirtualIP:
     type: string
     default: ''
@@ -256,6 +260,7 @@ resources:
         rabbit_client_use_ssl: {get_param: RabbitClientUseSSL}
         rabbit_client_port: {get_param: RabbitClientPort}
         ntp_servers: {get_param: NtpServer}
+        timezone: {get_param: TimeZone}
         enable_package_install: {get_param: EnablePackageInstall}
         enable_package_upgrade: {get_attr: [UpdateDeployment, update_managed_packages]}
 
@@ -298,6 +303,7 @@ resources:
                 cinder_iscsi_ip_address: {get_input: cinder_iscsi_ip_address}
                 cinder::glance::glance_api_servers: {get_input: glance_api_servers}
                 ntp::servers: {get_input: ntp_servers}
+                timezone::timezone: {get_input: timezone}
                 tripleo::packages::enable_install: {get_input: enable_package_install}
                 tripleo::packages::enable_upgrade: {get_input: enable_package_upgrade}
                 snmpd_readonly_user_name: {get_input: snmpd_readonly_user_name}
