--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -54,6 +54,13 @@ parameters:
       Role specific additional hiera configuration to inject into the cluster.
     type: json
 
+  SoftwareConfigTransport:
+    default: POLL_SERVER_CFN
+    description: |
+      How the server should receive the metadata required for software configuration.
+    type: string
+    constraints:
+    - allowed_values: [POLL_SERVER_CFN, POLL_SERVER_HEAT, POLL_TEMP_URL, ZAQAR_MESSAGE]
 
 resources:
   CephStorage:
@@ -68,6 +75,7 @@ resources:
       user_data_format: SOFTWARE_CONFIG
       user_data: {get_resource: UserData}
       name: {get_param: Hostname}
+      software_config_transport: {get_param: SoftwareConfigTransport}
 
   # Combine the NodeAdminUserData and NodeUserData mime archives
   UserData:
