--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -268,6 +268,14 @@ parameters:
     type: string
     default: '' # Defaults to Heat created hostname
 
+  SoftwareConfigTransport:
+    default: POLL_SERVER_CFN
+    description: |
+      How the server should receive the metadata required for software configuration.
+    type: string
+    constraints:
+    - allowed_values: [POLL_SERVER_CFN, POLL_SERVER_HEAT, POLL_TEMP_URL, ZAQAR_MESSAGE]
+
 resources:
 
   NovaCompute:
@@ -284,6 +292,7 @@ resources:
       user_data_format: SOFTWARE_CONFIG
       user_data: {get_resource: UserData}
       name: {get_param: Hostname}
+      software_config_transport: {get_param: SoftwareConfigTransport}
 
   # Combine the NodeAdminUserData and NodeUserData mime archives
   UserData:
