Added puppet code to conditionally add rgw to osp controllers Depends on pull request https://github.com/redhat-openstack/openstack-puppet-modules/pull/290

--- a/puppet/hieradata/ceph.yaml
+++ b/puppet/hieradata/ceph.yaml
@@ -1,12 +1,44 @@
 ceph::profile::params::osd_journal_size: 1024
-ceph::profile::params::osd_pool_default_pg_num: 32
-ceph::profile::params::osd_pool_default_pgp_num: 32
+ceph::profile::params::osd_pool_default_pg_num: 128
+ceph::profile::params::osd_pool_default_pgp_num: 128
 ceph::profile::params::osd_pool_default_size: 3
 ceph::profile::params::osd_pool_default_min_size: 1
-ceph::profile::params::osds: {/srv/data: {}}
+#ceph::profile::params::osds: {/srv/data: {}}
+ceph::profile::params::osds: 
+  '/dev/sdb':
+     journal: '/dev/sdn1'
+  '/dev/sdc':
+     journal: '/dev/sdn2'
+  '/dev/sdd':
+     journal: '/dev/sdn3'
+  '/dev/sde':
+     journal: '/dev/sdn4'
+  '/dev/sdf':
+     journal: '/dev/sdo1'
+  '/dev/sdg':
+     journal: '/dev/sdo2'
+  '/dev/sdh':
+     journal: '/dev/sdo3'
+  '/dev/sdi':
+     journal: '/dev/sdo4'
+  '/dev/sdj':
+     journal: '/dev/sdp1'
+  '/dev/sdk':
+     journal: '/dev/sdp2'
+  '/dev/sdl':
+     journal: '/dev/sdp3'
+  '/dev/sdm':
+     journal: '/dev/sdp4'
 ceph::profile::params::manage_repo: false
 ceph::profile::params::authentication_type: cephx
 
-ceph_classes: []
+ceph::profile::params::enable_rgw: true
+ceph::profile::params::rgw_print_continue: true
+ceph::profile::params::rgw_frontends: "civetweb port=7480"
+
+ceph_pools:
+  - volumes
+  - vms
+  - images
 
 ceph_osd_selinux_permissive: true
