Change for configuring use_forwarded_for value for Nuage
Added a parameter to Nuage ExtraConfig template for setting
use_forwarded_for value required by Nuage metadata agent

Change-Id: I02c15311272126c5e530f118fbfb4a8f6e11a620
(cherry picked from commit 8337b69bc9f21b85accb683009bbc872c00340e0)

--- a/puppet/extraconfig/pre_deploy/controller/neutron-nuage.yaml
+++ b/puppet/extraconfig/pre_deploy/controller/neutron-nuage.yaml
@@ -43,6 +43,11 @@ parameters:
     description: Cloud Management System ID (CMS ID) to distinguish between OS instances on the same VSD
     type: string
 
+  UseForwardedFor:
+    description: Treat X-Forwarded-For as the canonical remote address. Only enable this if you have a sanitizing proxy.
+    type: boolean
+    default: false
+
 resources:
   NeutronNuageConfig:
     type: OS::Heat::StructuredConfig
@@ -61,6 +66,7 @@ resources:
                neutron::plugins::nuage::nuage_vsd_organization: {get_input: NuageVSDOrganization}
                neutron::plugins::nuage::nuage_base_uri_version: {get_input: NuageBaseURIVersion}
                neutron::plugins::nuage::nuage_cms_id: {get_input: NuageCMSId}
+               nova::api::use_forwarded_for: {get_input: NovaUseForwardedFor}
 
   NeutronNuageDeployment:
     type: OS::Heat::StructuredDeployment
@@ -77,6 +83,7 @@ resources:
         NuageVSDOrganization: {get_param: NeutronNuageVSDOrganization}
         NuageBaseURIVersion: {get_param: NeutronNuageBaseURIVersion}
         NuageCMSId: {get_param: NeutronNuageCMSId}
+        NovaUseForwardedFor: {get_param: UseForwardedFor}
 
 outputs:
   deploy_stdout:
