--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -107,6 +107,12 @@ parameters:
   MysqlVirtualIP:
     type: string
     default: ''
+  ServerMetadata:
+    default: {}
+    description: >
+      Extra properties or metadata passed to Nova for the created nodes in
+      the overcloud. It's accessible via the Nova metadata API.
+    type: json
 
   SoftwareConfigTransport:
     default: POLL_SERVER_CFN
@@ -137,6 +143,7 @@ resources:
       user_data: {get_resource: UserData}
       name: {get_param: Hostname}
       software_config_transport: {get_param: SoftwareConfigTransport}
+      metadata: {get_param: ServerMetadata}
 
   # Combine the NodeAdminUserData and NodeUserData mime archives
   UserData:
