--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -285,6 +285,12 @@ parameters:
   Hostname:
     type: string
     default: '' # Defaults to Heat created hostname
+  ServerMetadata:
+    default: {}
+    description: >
+      Extra properties or metadata passed to Nova for the created nodes in
+      the overcloud. It's accessible via the Nova metadata API.
+    type: json
 
   SoftwareConfigTransport:
     default: POLL_SERVER_CFN
@@ -318,6 +324,7 @@ resources:
       user_data: {get_resource: UserData}
       name: {get_param: Hostname}
       software_config_transport: {get_param: SoftwareConfigTransport}
+      metadata: {get_param: ServerMetadata}
 
   # Combine the NodeAdminUserData and NodeUserData mime archives
   UserData:
