--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -600,6 +600,12 @@ parameters:
     description: >
       The DNS domain used for the hosts. This should match the dhcp_domain
       configured in the Undercloud neutron. Defaults to localdomain.
+  ServerMetadata:
+    default: {}
+    description: >
+      Extra properties or metadata passed to Nova for the created nodes in
+      the overcloud. It's accessible via the Nova metadata API.
+    type: json
 
   SoftwareConfigTransport:
     default: POLL_SERVER_CFN
@@ -625,6 +631,7 @@ resources:
       user_data: {get_resource: UserData}
       name: {get_param: Hostname}
       software_config_transport: {get_param: SoftwareConfigTransport}
+      metadata: {get_param: ServerMetadata}
 
   # Combine the NodeAdminUserData and NodeUserData mime archives
   UserData:
