--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -77,6 +77,12 @@ parameters:
     description: |
       Role specific additional hiera configuration to inject into the cluster.
     type: json
+  ServerMetadata:
+    default: {}
+    description: >
+      Extra properties or metadata passed to Nova for the created nodes in
+      the overcloud. It's accessible via the Nova metadata API.
+    type: json
 
   SoftwareConfigTransport:
     default: POLL_SERVER_CFN
@@ -107,6 +113,7 @@ resources:
       user_data: {get_resource: UserData}
       name: {get_param: Hostname}
       software_config_transport: {get_param: SoftwareConfigTransport}
+      metadata: {get_param: ServerMetadata}
 
   # Combine the NodeAdminUserData and NodeUserData mime archives
   UserData:
