--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -245,3 +245,9 @@ outputs:
     description: The ID of the allNodesConfigImpl resource.
     value:
       {get_resource: allNodesConfigImpl}
+  hosts_entries:
+    description: |
+      The content that should be appended to your /etc/hosts if you want do get
+      hostname-based access to the deployed nodes (useful for testing without
+      setting up a DNS).
+    value: {get_attr: [allNodesConfigImpl, config, hosts]}
