Enable per-role SchedulerHints
This adds a parameter for each role, where optional scheduler hints
may be passed to nova.  One potential use-case for this is using
the ComputeCapabilities to pin deployment to a specific node (not
just a specific role/profile mapping to a pool of nodes like we
have currently documented in the ahc-match docs).

This could work as follows:

1. Tag a specific node as "node:controller-0" in Ironic:

ironic node-update <id> replace properties/capabilities='node:controller-0,boot_option:local'

2. Create a heat environment file which uses %index%

parameters:
  ControllerSchedulerHints:
    'capabilities:node': 'controller-%index%'

Change-Id: I79251dde719b4bb5c3b0cce90d0c9d1581ae66f2
(cherry picked from commit 5d61012f86a2e036908a2f7441672e43cbd34790)

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -408,6 +408,10 @@ parameters:
     default: true
     description: Whether to enable Swift Storage on the Controller
     type: boolean
+  ControllerSchedulerHints:
+    type: json
+    description: Optional scheduler hints to pass to nova
+    default: {}
   ExtraConfig:
     default: {}
     description: |
@@ -628,6 +632,10 @@ parameters:
     default: ''
     description: Libvirt VIF driver configuration for the network
     type: string
+  NovaComputeSchedulerHints:
+    type: json
+    description: Optional scheduler hints to pass to nova
+    default: {}
   NovaEnableRbdBackend:
     default: false
     description: Whether to enable or not the Rbd backend for Nova
@@ -704,6 +712,11 @@ parameters:
       BlockStorage specific configuration to inject into the cluster. Same
       structure as ExtraConfig.
     type: json
+  BlockStorageSchedulerHints:
+    type: json
+    description: Optional scheduler hints to pass to nova
+    default: {}
+
 
 # Object storage specific parameters
   ObjectStorageCount:
@@ -724,7 +737,10 @@ parameters:
       ObjectStorage specific configuration to inject into the cluster. Same
       structure as ExtraConfig.
     type: json
-
+  ObjectStorageSchedulerHints:
+    type: json
+    description: Optional scheduler hints to pass to nova
+    default: {}
 
 # Ceph storage specific parameters
   CephStorageCount:
@@ -745,6 +761,11 @@ parameters:
       CephStorage specific configuration to inject into the cluster. Same
       structure as ExtraConfig.
     type: json
+  CephStorageSchedulerHints:
+    type: json
+    description: Optional scheduler hints to pass to nova
+    default: {}
+
 
   # Hostname format for each role
   # Note %index% is translated into the index of the node, e.g 0/1/2 etc
@@ -989,6 +1010,7 @@ resources:
                 '%stackname%': {get_param: 'OS::stack_name'}
           NodeIndex: '%index%'
           ServerMetadata: {get_param: ServerMetadata}
+          SchedulerHints: {get_param: ControllerSchedulerHints}
 
   Compute:
     type: OS::Heat::ResourceGroup
@@ -1067,6 +1089,7 @@ resources:
                 '%stackname%': {get_param: 'OS::stack_name'}
           CloudDomain: {get_param: CloudDomain}
           ServerMetadata: {get_param: ServerMetadata}
+          SchedulerHints: {get_param: NovaComputeSchedulerHints}
 
   BlockStorage:
     type: OS::Heat::ResourceGroup
@@ -1107,6 +1130,7 @@ resources:
           BlockStorageExtraConfig: {get_param: BlockStorageExtraConfig}
           CloudDomain: {get_param: CloudDomain}
           ServerMetadata: {get_param: ServerMetadata}
+          SchedulerHints: {get_param: BlockStorageSchedulerHints}
 
   ObjectStorage:
     type: OS::Heat::ResourceGroup
@@ -1138,6 +1162,7 @@ resources:
           ObjectStorageExtraConfig: {get_param: ObjectStorageExtraConfig}
           CloudDomain: {get_param: CloudDomain}
           ServerMetadata: {get_param: ServerMetadata}
+          SchedulerHints: {get_param: ObjectStorageSchedulerHints}
 
   CephStorage:
     type: OS::Heat::ResourceGroup
@@ -1164,6 +1189,7 @@ resources:
           CephStorageExtraConfig: {get_param: CephStorageExtraConfig}
           CloudDomain: {get_param: CloudDomain}
           ServerMetadata: {get_param: ServerMetadata}
+          SchedulerHints: {get_param: CephStorageSchedulerHints}
 
   ControllerIpListMap:
     type: OS::TripleO::Network::Ports::NetIpListMap
