--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -312,6 +312,10 @@ parameters:
       Extra properties or metadata passed to Nova for the created nodes in
       the overcloud. It's accessible via the Nova metadata API.
     type: json
+  SchedulerHints:
+    type: json
+    description: Optional scheduler hints to pass to nova
+    default: {}
 
   SoftwareConfigTransport:
     default: POLL_SERVER_CFN
@@ -345,6 +349,7 @@ resources:
       name: {get_param: Hostname}
       software_config_transport: {get_param: SoftwareConfigTransport}
       metadata: {get_param: ServerMetadata}
+      scheduler_hints: {get_param: SchedulerHints}
 
   # Combine the NodeAdminUserData and NodeUserData mime archives
   UserData:
