--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -92,7 +92,6 @@ parameters:
       Extra properties or metadata passed to Nova for the created nodes in
       the overcloud. It's accessible via the Nova metadata API.
     type: json
-
   SoftwareConfigTransport:
     default: POLL_SERVER_CFN
     description: |
@@ -106,6 +105,10 @@ parameters:
     description: >
       The DNS domain used for the hosts. This should match the dhcp_domain
       configured in the Undercloud neutron. Defaults to localdomain.
+  SchedulerHints:
+    type: json
+    description: Optional scheduler hints to pass to nova
+    default: {}
 
 resources:
 
@@ -122,6 +125,7 @@ resources:
       name: {get_param: Hostname}
       software_config_transport: {get_param: SoftwareConfigTransport}
       metadata: {get_param: ServerMetadata}
+      scheduler_hints: {get_param: SchedulerHints}
 
   # Combine the NodeAdminUserData and NodeUserData mime archives
   UserData:
