--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -69,7 +69,6 @@ parameters:
       Extra properties or metadata passed to Nova for the created nodes in
       the overcloud. It's accessible via the Nova metadata API.
     type: json
-
   SoftwareConfigTransport:
     default: POLL_SERVER_CFN
     description: |
@@ -83,6 +82,10 @@ parameters:
     description: >
       The DNS domain used for the hosts. This should match the dhcp_domain
       configured in the Undercloud neutron. Defaults to localdomain.
+  SchedulerHints:
+    type: json
+    description: Optional scheduler hints to pass to nova
+    default: {}
 
 resources:
   CephStorage:
@@ -99,6 +102,8 @@ resources:
       name: {get_param: Hostname}
       software_config_transport: {get_param: SoftwareConfigTransport}
       metadata: {get_param: ServerMetadata}
+      scheduler_hints: {get_param: SchedulerHints}
+
   # Combine the NodeAdminUserData and NodeUserData mime archives
   UserData:
     type: OS::Heat::MultipartMime
