Enable per-role SchedulerHints
This adds a parameter for each role, where optional scheduler hints
may be passed to nova.  One potential use-case for this is using
the ComputeCapabilities to pin deployment to a specific node (not
just a specific role/profile mapping to a pool of nodes like we
have currently documented in the ahc-match docs).

This could work as follows:

1. Tag a specific node as "node:controller-0" in Ironic:

ironic node-update <id> replace properties/capabilities='node:controller-0,boot_option:local'

2. Create a heat environment file which uses %index%

parameters:
  ControllerSchedulerHints:
    'capabilities:node': 'controller-%index%'

Change-Id: I79251dde719b4bb5c3b0cce90d0c9d1581ae66f2

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -644,6 +644,10 @@ parameters:
       Extra properties or metadata passed to Nova for the created nodes in
       the overcloud. It's accessible via the Nova metadata API.
     type: json
+  SchedulerHints:
+    type: json
+    description: Optional scheduler hints to pass to nova
+    default: {}
 
 resources:
 
@@ -660,6 +664,7 @@ resources:
       user_data: {get_resource: UserData}
       name: {get_param: Hostname}
       metadata: {get_param: ServerMetadata}
+      scheduler_hints: {get_param: SchedulerHints}
 
   # Combine the NodeAdminUserData and NodeUserData mime archives
   UserData:
