--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -368,6 +368,10 @@ parameters:
     default: true
     description: Whether to enable Swift Storage on the Controller
     type: boolean
+  ControllerSchedulerHints:
+    type: json
+    description: Optional scheduler hints to pass to nova
+    default: {}
   ExtraConfig:
     default: {}
     description: |
@@ -585,6 +589,10 @@ parameters:
     default: ''
     description: Libvirt VIF driver configuration for the network
     type: string
+  NovaComputeSchedulerHints:
+    type: json
+    description: Optional scheduler hints to pass to nova
+    default: {}
   NovaEnableRbdBackend:
     default: false
     description: Whether to enable or not the Rbd backend for Nova
@@ -659,6 +667,11 @@ parameters:
       BlockStorage specific configuration to inject into the cluster. Same
       structure as ExtraConfig.
     type: json
+  BlockStorageSchedulerHints:
+    type: json
+    description: Optional scheduler hints to pass to nova
+    default: {}
+
 
 # Object storage specific parameters
   ObjectStorageCount:
@@ -678,7 +691,10 @@ parameters:
       ObjectStorage specific configuration to inject into the cluster. Same
       structure as ExtraConfig.
     type: json
-
+  ObjectStorageSchedulerHints:
+    type: json
+    description: Optional scheduler hints to pass to nova
+    default: {}
 
 # Ceph storage specific parameters
   CephStorageCount:
@@ -699,6 +715,11 @@ parameters:
       CephStorage specific configuration to inject into the cluster. Same
       structure as ExtraConfig.
     type: json
+  CephStorageSchedulerHints:
+    type: json
+    description: Optional scheduler hints to pass to nova
+    default: {}
+
 
   # Hostname format for each role
   # Note %index% is translated into the index of the node, e.g 0/1/2 etc
@@ -936,6 +957,7 @@ resources:
                 '%stackname%': {get_param: 'OS::stack_name'}
           NodeIndex: '%index%'
           ServerMetadata: {get_param: ServerMetadata}
+          SchedulerHints: {get_param: ControllerSchedulerHints}
 
   Compute:
     type: OS::Heat::ResourceGroup
@@ -1011,6 +1033,7 @@ resources:
                 '%stackname%': {get_param: 'OS::stack_name'}
           CloudDomain: {get_param: CloudDomain}
           ServerMetadata: {get_param: ServerMetadata}
+          SchedulerHints: {get_param: NovaComputeSchedulerHints}
 
   BlockStorage:
     type: OS::Heat::ResourceGroup
@@ -1050,6 +1073,7 @@ resources:
           BlockStorageExtraConfig: {get_param: BlockStorageExtraConfig}
           CloudDomain: {get_param: CloudDomain}
           ServerMetadata: {get_param: ServerMetadata}
+          SchedulerHints: {get_param: BlockStorageSchedulerHints}
 
   ObjectStorage:
     type: OS::Heat::ResourceGroup
@@ -1080,6 +1104,7 @@ resources:
           ObjectStorageExtraConfig: {get_param: ObjectStorageExtraConfig}
           CloudDomain: {get_param: CloudDomain}
           ServerMetadata: {get_param: ServerMetadata}
+          SchedulerHints: {get_param: ObjectStorageSchedulerHints}
 
   CephStorage:
     type: OS::Heat::ResourceGroup
@@ -1105,6 +1130,7 @@ resources:
           CephStorageExtraConfig: {get_param: CephStorageExtraConfig}
           CloudDomain: {get_param: CloudDomain}
           ServerMetadata: {get_param: ServerMetadata}
+          SchedulerHints: {get_param: CephStorageSchedulerHints}
 
   ControllerIpListMap:
     type: OS::TripleO::Network::Ports::NetIpListMap
