Allow for usage of pre-allocated IPs for the controller nodes
This change adds a new *_from_pool.yaml meant to return an IP from
a list instead of allocating a Neutron port, useful to pick an IP
from a pre-defined list and making it possible to configure, for
example an external balancer in advance (or dns), with the future
IPs of the controller nodes.

The list of IPs is provided via parameter_defaults (in the
ControllerIPs struct) using ControllerIPs param.

Also some additional VipPort types are created for the *VirtualIP
resources. The VIPs were previously created using the same port
resource used by the nodes, but when deploying with an external
balancer we want the VIP resource to be nooped instead.

Change-Id: Id3d4f12235501ae77200430a2dc022f378dce336

--- a/environments/external-loadbalancer-vip.yaml
+++ b/environments/external-loadbalancer-vip.yaml
@@ -1,14 +1,37 @@
 resource_registry:
   OS::TripleO::Network::Ports::NetVipMap: ../network/ports/net_vip_map_external.yaml
+  OS::TripleO::Network::Ports::ExternalVipPort: ../network/ports/noop.yaml
+  OS::TripleO::Network::Ports::InternalApiVipPort: ../network/ports/noop.yaml
+  OS::TripleO::Network::Ports::StorageVipPort: ../network/ports/noop.yaml
+  OS::TripleO::Network::Ports::StorageMgmtVipPort: ../network/ports/noop.yaml
+  OS::TripleO::Network::Ports::RedisVipPort: ../network/ports/from_service.yaml
+  OS::TripleO::Controller::Ports::ExternalPort: ../network/ports/external_from_pool.yaml
+  OS::TripleO::Controller::Ports::InternalApiPort: ../network/ports/internal_api_from_pool.yaml
+  OS::TripleO::Controller::Ports::StoragePort: ../network/ports/storage_from_pool.yaml
+  OS::TripleO::Controller::Ports::StorageMgmtPort: ../network/ports/storage_mgmt_from_pool.yaml
+  OS::TripleO::Controller::Ports::TenantPort: ../network/ports/tenant_from_pool.yaml
 
 parameter_defaults:
   # When using an external loadbalancer set the following in parameter_defaults
   # to control your VIPs (currently one per network)
   # NOTE: we will eventually move to one VIP per service
   #
-  # ControlNetworkVip:
-  # ExternalNetworkVip:
-  # InternalApiNetworkVip:
-  # StorageNetworkVip:
-  # StorageMgmtNetworkVip:
+  ControlPlaneIP: 192.0.2.251
+  ExternalNetworkVip: 10.0.0.251
+  InternalApiNetworkVip: 172.16.2.251
+  StorageNetworkVip: 172.16.1.251
+  StorageMgmtNetworkVip: 172.16.3.251
+  ServiceVips:
+    redis: 172.16.2.252
+  ControllerIPs:
+    external:
+    - 10.0.0.253
+    internal_api:
+    - 172.16.2.253
+    storage:
+    - 172.16.1.253
+    storage_mgmt:
+    - 172.16.3.253
+    tenant:
+    - 172.16.0.253
   EnableLoadBalancer: false
