--- a/network/ports/net_vip_map_external.yaml
+++ b/network/ports/net_vip_map_external.yaml
@@ -2,7 +2,7 @@ heat_template_version: 2015-04-30
 
 parameters:
   # Set these via parameter defaults to configure external VIPs
-  ControlNetworkVip:
+  ControlPlaneIP:
     default: ''
     type: string
   ExternalNetworkVip:
@@ -43,7 +43,7 @@ outputs:
       A Hash containing a mapping of network names to assigned IPs
       for a specific machine.
     value:
-      ctlplane: {get_param: ControlNetworkVip}
+      ctlplane: {get_param: ControlPlaneIP}
       external: {get_param: ExternalNetworkVip}
       internal_api: {get_param: InternalApiNetworkVip}
       storage: {get_param: StorageNetworkVip}
