--- a/network/ports/noop.yaml
+++ b/network/ports/noop.yaml
@@ -4,6 +4,10 @@ description: >
   Returns the control plane port (provisioning network) as the ip_address.
 
 parameters:
+  ServiceName: # Here for compatibility with from_service.yaml
+    description: Name of the service to lookup
+    default: ''
+    type: string
   ControlPlaneIP:
     description: IP address on the control plane
     type: string
@@ -27,6 +31,14 @@ parameters:
     default: '24'
     description: The subnet CIDR of the control plane network.
     type: string
+  IPPool: # Here for compatibility with from_pool.yaml
+    default: {}
+    description: A network mapped list of IPs
+    type: json
+  NodeIndex: # Here for compatibility with from_pool.yaml
+    default: 0
+    description: Index of the IP to get from Pool
+    type: number
 
 outputs:
   ip_address:
