--- a/network/ports/vip.yaml
+++ b/network/ports/vip.yaml
@@ -5,6 +5,10 @@ description: >
   The IP address will be chosen automatically if FixedIPs is empty.
 
 parameters:
+  ServiceName: # Here for compatibility with from_service.yaml
+    description: Name of the service to lookup
+    default: ''
+    type: string
   NetworkName:
     description: Name of the network where the VIP will be created
     default: internal_api
