--- a/network/ports/ctlplane_vip.yaml
+++ b/network/ports/ctlplane_vip.yaml
@@ -5,6 +5,10 @@ description: >
   The IP address will be chosen automatically if FixedIPs is empty.
 
 parameters:
+  ServiceName: # Here for compatibility with from_service.yaml
+    description: Name of the service to lookup
+    default: ''
+    type: string
   NetworkName:
     description: # Here for compatibility with isolated networks
     default: ctlplane
