--- a/network/ports/storage.yaml
+++ b/network/ports/storage.yaml
@@ -22,6 +22,12 @@ parameters:
         [{'ip_address':'1.2.3.4'}]
     default: []
     type: json
+  IPPool: # Here for compatibility with from_pool.yaml
+    default: {}
+    type: json
+  NodeIndex: # Here for compatibility with from_pool.yaml
+    default: 0
+    type: number
 
 resources:
 
