--- a/network/ports/internal_api.yaml
+++ b/network/ports/internal_api.yaml
@@ -16,6 +16,12 @@ parameters:
     description: IP address on the control plane
     default: ''
     type: string
+  IPPool: # Here for compatibility with from_pool.yaml
+    default: {}
+    type: json
+  NodeIndex: # Here for compatibility with from_pool.yaml
+    default: 0
+    type: number
 
 resources:
 
